<resources>
    <string name="app_name">Ielts Preparation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Info">Info</string>
    <string name="reading">Reading</string>
    <string name="image_icon">image icon</string>
    <string name="title">Title</string>
    <string name="reaping">Reaping</string>
    <string name="listening">Listening</string>
    <string name="writing">Writing</string>
    <string name="_50">50%</string>
    <string name="_80">80%</string>
    <string name="_30">30%</string>
    <string name="your_progress">YOUR PROGRESS</string>
    <string name="grammar">Grammar</string>
    <string name="basic_level">Beginner</string>
    <string name="advance_level">Advance</string>
    <string name="speaking">Speaking</string>
    <string name="item_list">Item List</string>
    <string name="song_title">Song Title</string>
    <string name="question">Questions</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="next">Next</string>
    <string name="_200">10</string>
    <string name="_0_00">0.00</string>
    <string name="_2_00">2.00</string>
    <string name="up_coming_questions">Up coming Questions\nScroll up to see more</string>
    <string name="intermediate_level">Intermediate</string>
    <string name="pasage_here">Pasage here</string>
    <string name="title2">TITLE</string>
    <string name="demo">Your Question</string>
    <string name="show_demo_answer">Show Demo Answer</string>
    <string name="show_hint">Show Hint</string>
    <string name="zoom_in_the_picture_if_needed">zoom in the picture if needed</string>
    <string name="Speaking">Speaking</string>
    <string name="task_1">TASK 1</string>
    <string name="task_2">TASK 2</string>
    <string name="load_basic_link">https://codemind.live/apps/ielts/listening/beginner/get.php</string>
    <string name="load_intermediate_link">https://codemind.live/apps/ielts/listening/intermediate/get.php</string>
    <string name="load_advanced_link">https://codemind.live/apps/ielts/listening/advanced/get.php</string>
    <string name="name">Name</string>
    <string name="setting_icon">setting icon</string>
    <string name="your_email">Email</string>
    <string name="your_password">Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Dont Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_login">Click to Sign Up / Login</string>
    <string name="to_see_your_progress_please_login">To see your progress please login</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="ielts_preparation">IELTS Preparation</string>
    <string name="_3400">34000</string>
    <string name="profile">Profile</string>
    <string name="ranking">Rank</string>
    <string name="coins">Coins</string>
    <string name="ooo">000</string>
    <string name="Extras">Extras</string>
    <string name="free_reading">Free Reading</string>
    <string name="free_listening">Free Listening\nwithout quiz</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="rate_us_txt">Thank You    (click to rate)\nDont forget to rate us on Play Store\nit helps us doing even better</string>
    <string name="log_out">LOG OUT</string>
    <string name="privacy_policy">privacy/policy</string>
    <string name="recent_updates">Recent updates :</string>
    <string name="pp_link">https://ghostdev007.blogspot.com/p/ielts-exam-practice-b2a-2023.html</string>
    <string name="item_1">item 1</string>
    <string name="_1">1</string>
    <string name="_date">28/06/2023</string>
    <string name="mock_txt">Apart from this, there will be the opportunity for an IELTS mock test with the IELTS grading system by an Experience IELTS trainer at $1 Only. However, it can be free for regular users. You can buy using free coins \n</string>
    <string name="buy_using_5000_coins">Buy using 5000 coins</string>
    <string name="dont_have_enough_coins">Dont have enough Coins ?</string>
    <string name="or">OR</string>
    <string name="buy_with_1">Buy with 1$ only</string>
    <string name="mail_us_on_nanalysisghost8_gmail_com_nour_teacher_will_verify_the_payment_reach_u_out_soon_nafter_you_mail">Mail Us on\nanalysisghost8@gmail.com\nOur Teacher will verify the payment reach u out soon\nAfter you mail</string>
    <string name="click_to_mail">Click To Mail</string>
    <string name="BannerAds">ca-app-pub-3654452118274560/1288952081</string>
    <string name="full_screen_ad">ca-app-pub-3654452118274560/3615732527</string>
    <string name="save_points">Save Points</string>
    <string name="save">Save</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="login_signup">Login / SignUp</string>
    <string name="rate">Rate Us</string>

    <string-array name="country_list">
        <!-- Previous items -->
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Costa Rica</item>
        <item>Cote d Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>

</resources>