<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login_nav"
        android:title="@string/login_signup"
        android:icon="@drawable/login"
        />
    <item
        android:id="@+id/contact_dev_nav"
        android:title="@string/contact_developer"
        android:icon="@drawable/call"
        />

    <item
        android:id="@+id/rate_nav"
        android:title="@string/rate"
        android:icon="@drawable/love"
        />

    <item
        android:id="@+id/pp_nav"
        android:title="@string/privacy_policy"
        android:icon="@drawable/privacy"
        />

    <item
        android:id="@+id/recent_nav"
        android:title="@string/recent_updates"
        android:icon="@drawable/recent"
        />

    <item
        android:id="@+id/logout_nav"
        android:title="@string/log_out"
        android:icon="@drawable/logout"
        />



</menu>