<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/num"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/_date"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/recent_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_1"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        android:layout_margin="5dp"
        android:gravity="center"
        />

</LinearLayout>