<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Reading.ReadingFrag"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <LinearLayout
                    android:layout_margin="10dp"
                    android:id="@+id/quizLay2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/score_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/main_Q_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/pasage_here"
                        android:textSize="25sp"
                        android:fontFamily="serif-monospace"
                        android:textStyle="bold|italic"
                        android:layout_margin="5dp"
                        />



                    <TextView
                        android:layout_margin="10dp"
                        android:id="@+id/question_text_view2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <com.jsibbold.zoomage.ZoomageView
                        android:id="@+id/q_pic2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_launcher_foreground"
                        app:zoomage_restrictBounds="false"
                        app:zoomage_animateOnReset="true"
                        app:zoomage_autoResetMode="UNDER"
                        app:zoomage_autoCenter="true"
                        app:zoomage_zoomable="true"
                        app:zoomage_translatable="true"
                        app:zoomage_minScale="0.6"
                        app:zoomage_maxScale="8"
                        />


                    <RadioGroup
                        android:id="@+id/answer_options_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/answer_radio_button_1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_1" />

                        <RadioButton
                            android:id="@+id/answer_radio_button_2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_2" />

                        <RadioButton
                            android:id="@+id/answer_radio_button_3_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_3" />

                        <RadioButton
                            android:id="@+id/answer_radio_button_4_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_4" />

                    </RadioGroup>

                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/next_button2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:backgroundTint="#FF5722"
                        />


                </LinearLayout>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/score_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="#808080"
                    android:gravity="center"
                    android:text="@string/_200"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:visibility="gone"
                    android:id="@+id/wrong_anim2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/score_tv2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/wrong" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>