<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Listening.ListeningFrag"
    android:orientation="vertical"
    android:background="@color/main_bg"
    >

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- Song Info -->
        <LinearLayout
            android:id="@+id/song_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/song_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/btn_color"
                />
        </LinearLayout>

        <!-- Playback Controls -->
        <LinearLayout
            android:id="@+id/control_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/song_info_layout"
            android:orientation="horizontal"
            android:padding="17dp"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/time_remaining"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:text="@string/_0_00"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                />

            <ImageButton
                android:contentDescription="@string/image_icon"
                android:id="@+id/previous_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_previous" />

            <ImageButton
                android:id="@+id/play_pause_button"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_play"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/image_icon"
                />

            <ImageButton
                android:id="@+id/audio_next_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_next"
                android:contentDescription="@string/image_icon" />

            <TextView
                android:id="@+id/total_time"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:text="@string/_2_00"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                />
        </LinearLayout>

        <!-- Seekbar -->
        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/control_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:progress="0"
            android:max="100" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <LinearLayout
                    android:layout_margin="10dp"
                    android:id="@+id/quizLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/score_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_margin="10dp"
                        android:id="@+id/question_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                    <com.jsibbold.zoomage.ZoomageView
                        android:id="@+id/q_pic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_launcher_foreground"
                        app:zoomage_restrictBounds="false"
                        app:zoomage_animateOnReset="true"
                        app:zoomage_autoResetMode="UNDER"
                        app:zoomage_autoCenter="true"
                        app:zoomage_zoomable="true"
                        app:zoomage_translatable="true"
                        app:zoomage_minScale="0.6"
                        app:zoomage_maxScale="8"
                        />


                    <RadioGroup
                        android:id="@+id/answer_options_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/answer_radio_button_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_1" />

                        <RadioButton
                            android:id="@+id/answer_radio_button_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_2" />

                        <RadioButton
                            android:id="@+id/answer_radio_button_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_3" />

                        <RadioButton
                            android:id="@+id/answer_radio_button_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_4" />

                    </RadioGroup>

                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/next_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:backgroundTint="#FF5722"
                        />


                </LinearLayout>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/score_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="#808080"
                    android:gravity="center"
                    android:text="@string/_200"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:visibility="gone"
                    android:id="@+id/wrong_anim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/score_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/wrong" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up_coming_questions"
            android:gravity="center"
            />

        <ListView
            android:id="@+id/upComingList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

    </LinearLayout>



</LinearLayout>