<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/man"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
         />

    <TextView
        android:id="@+id/userName_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        >

        <ImageView
            android:contentDescription="@string/image_icon"
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/reward"
            />

        <TextView
            android:fontFamily="serif-monospace"
            android:id="@+id/points_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/ooo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
             />

    </LinearLayout>

</LinearLayout>